fix PayOs