@@ -9,6 +9,7 @@ import io.swagger.v3.oas.models.security.SecurityRequirement;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -21,7 +22,10 @@ public class SwaggerConfig {
                         .title("Glody Study Abroad API")
                         .description("API documentation for Glody Platform")
                         .version("1.0.0"))
-                .servers(List.of(new Server().url("https://pog.threemusketeer.click")))
+                .servers(Arrays.asList(
+                        new Server().url("http://localhost:9876").description("Local Dev"),
+                        new Server().url("https://pog.threemusketeer.click").description("Production")
+                ))
                 .addSecurityItem(new SecurityRequirement().addList("bearerAuth"))
                 .components(new Components()
                         .addSecuritySchemes("bearerAuth", new SecurityScheme()
